--- a/tahub/package.json
+++ b/tahub/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "loadash": "^1.0.0",
     "lodash": "^4.17.21",
+    "mongodb": "^6.5.0",
     "mongoose": "^5.12.3",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
